--- a/tailwindProject/src/index.css
+++ b/tailwindProject/src/index.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body{
+    @apply font-body
+}
+    h1,h2,h2{
+        @apply font-display font-medium text-gray-800
+    }
+}
